# katydid-haskell

./: .gitignore  .travis.yml  LICENSE  Makefile  Readme.md  changelog.md  haslapse.cabal  katydid.cabal  package.yaml  stack.yaml
app/: Main.hs
bench/: Benchmarks.hs  Suite.hs
docs/: Ast.html  Data-Katydid-Parser-Json.html  Data-Katydid-Parser-Parser.html  Data-Katydid-Parser-Xml.html  Data-Katydid-Relapse-Ast.html  Data-Katydid-Relapse-Derive.html  Data-Katydid-Relapse-Expr.html  Data-Katydid-Relapse-Exprs-Compare.html  Data-Katydid-Relapse-Exprs-Contains.html  Data-Katydid-Relapse-Exprs-Elem.html  Data-Katydid-Relapse-Exprs-Length.html  Data-Katydid-Relapse-Exprs-Logic.html  Data-Katydid-Relapse-Exprs-Strings.html  Data-Katydid-Relapse-Exprs-Type.html  Data-Katydid-Relapse-Exprs-Var.html  Data-Katydid-Relapse-Exprs.html  Data-Katydid-Relapse-IfExprs.html  Data-Katydid-Relapse-MemDerive.html  Data-Katydid-Relapse-Parser.html  Data-Katydid-Relapse-Relapse.html  Data-Katydid-Relapse-Simplify.html  Data-Katydid-Relapse-Smart.html  Data-Katydid-Relapse-VpaDerive.html  Data-Katydid-Relapse-Zip.html  Deriv.html  Derive.html  Expr.html  Exprs-Compare.html  Exprs-Contains.html  Exprs-Elem.html  Exprs-Length.html  Exprs-Logic.html  Exprs-Strings.html  Exprs-Type.html  Exprs-Var.html  Exprs.html  IfExprs.html  Json.html  MapDeriv.html  MemDerive.html  (+59 more)
docs/src/: Ast.html  Data.Katydid.Parser.Json.html  Data.Katydid.Parser.Parser.html  Data.Katydid.Parser.Xml.html  Data.Katydid.Relapse.Ast.html  Data.Katydid.Relapse.Derive.html  Data.Katydid.Relapse.Expr.html  Data.Katydid.Relapse.Exprs.Compare.html  Data.Katydid.Relapse.Exprs.Contains.html  Data.Katydid.Relapse.Exprs.Elem.html  Data.Katydid.Relapse.Exprs.Length.html  Data.Katydid.Relapse.Exprs.Logic.html  Data.Katydid.Relapse.Exprs.Strings.html  Data.Katydid.Relapse.Exprs.Type.html  Data.Katydid.Relapse.Exprs.Var.html  Data.Katydid.Relapse.Exprs.html  Data.Katydid.Relapse.IfExprs.html  Data.Katydid.Relapse.MemDerive.html  Data.Katydid.Relapse.Parser.html  Data.Katydid.Relapse.Relapse.html  Data.Katydid.Relapse.Simplify.html  Data.Katydid.Relapse.Smart.html  Data.Katydid.Relapse.VpaDerive.html  Data.Katydid.Relapse.Zip.html  Deriv.html  Derive.html  Expr.html  Exprs.Compare.html  Exprs.Contains.html  Exprs.Elem.html  Exprs.Length.html  Exprs.Logic.html  Exprs.Strings.html  Exprs.Type.html  Exprs.Var.html  Exprs.html  IfExprs.html  Json.html  MapDeriv.html  MemDerive.html  (+13 more)
src/: Ast.hs  Deriv.hs  Derive.hs  Expr.hs  Exprs.hs  IfExprs.hs  Json.hs  MapDeriv.hs  MemDerive.hs  ParsePatterns.hs  ParsedTree.hs  Parser.hs  Parsers.hs  Patterns.hs  Relapse.hs  Simplify.hs  Smart.hs  UnsafeDeriv.hs  UnsafeMem.hs  Values.hs  VpaDeriv.hs  VpaDerive.hs  Xml.hs  Zip.hs
src/Data/Katydid/Parser/: Json.hs  Parser.hs  Xml.hs
src/Data/Katydid/Parser/Protobuf/: Bytes.hs  Descriptor.hs  Protobuf.hs
src/Data/Katydid/Parser/Protobuf/Testdata/: Descriptors.hs  person.proto  phone.proto
src/Data/Katydid/Parser/Protobuf/Testdata/Proto/: Person.hs  Person_Fields.hs  Phone.hs  Phone_Fields.hs
src/Data/Katydid/Relapse/: Ast.hs  Derive.hs  Expr.hs  Exprs.hs  IfExprs.hs  MemDerive.hs  Parser.hs  Relapse.hs  Simplify.hs  Smart.hs  VpaDerive.hs  Zip.hs
src/Data/Katydid/Relapse/Exprs/: Compare.hs  Contains.hs  Elem.hs  Length.hs  Logic.hs  Strings.hs  Type.hs  Var.hs
src/Exprs/: Compare.hs  Contains.hs  Elem.hs  Length.hs  Logic.hs  Strings.hs  Type.hs  Var.hs
test/: DeriveSpec.hs  JsonSpec.hs  ParserSpec.hs  RelapseSpec.hs  Spec.hs  Suite.hs  UserDefinedFuncs.hs
