name:                haslapse
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/awalterschulze/haslapse#readme
license:             BSD3
license-file:        LICENSE
author:              Walter Schulze
maintainer:          awalterschulze@gmail.com
copyright:           Walter Schulze
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UnsafeMem
                     , Patterns
                     , Deriv
                     , MapDeriv
                     , UnsafeDeriv
                     , Zip
                     , IfExprs
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable haslapse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haslapse
                     , containers
  default-language:    Haskell2010

test-suite haslapse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haslapse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/awalterschulze/haslapse
