name:                katydid
version:             0.1.0.0
synopsis:            A haskell implementation of Relapse: Validation Language for JSON, XML and other trees.
description:         Please see README.md
homepage:            https://github.com/katydid/katydid-haskell
license:             BSD3
license-file:        LICENSE
author:              Walter Schulze
maintainer:          awalterschulze@gmail.com
copyright:           Walter Schulze
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Patterns
                     , Deriv
                     , MapDeriv
                     , Zip
                     , IfExprs
                     , Values
                     , Simplify
                     , Json
                     , Xml
                     , Parsers
                     , ParsePatterns
                     , VpaDeriv
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , json
                     , hxt
                     , regex-tdfa
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable katydid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , katydid
  default-language:    Haskell2010

test-suite katydid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , katydid
                     , directory
                     , filepath
                     , containers
                     , json
                     , hxt
                     , HUnit
                     , parsec
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/katydid/katydid-haskell
